2007-08-31 Mathieu Blondel <mblondel@cvs.gnome.org>

    * THANKS: Added :).

2007-08-31 Mathieu Blondel <mblondel@cvs.gnome.org>

    * pre-setup.rb: Don't act differently on Windows.
    * win32/: Added. This directory will be used for all the win32 stuff which
    obviously can't go to lib/.
    * win32/gen_po.rb: Added. This file generates the .mo files and must be run
    from win32/.
    * win32/fantasdic.c: Added. Run the ruby interpreter in a sub process and
    hide the command pop-up window.
    * win32/README: Instructions to help prepare an archive which contains all
    the dependencies including Ruby and GTK. This is heavy but my experience
    shows that you can't expect people to install Ruby and GTK separately...
    * lib/fantasdic/pre-setup.rb: Don't fail if run outside setup.rb.
    * bin/pre-setup.rb: Don't generate the .bat file anymore.

2007-08-31 Mathieu Blondel <mblondel@cvs.gnome.org>

    * MAINTAINERS: Added to follow GNOME's policy.

2007-08-31 Mathieu Blondel <mblondel@cvs.gnome.org>

    * make_release.sh: Delete .tmp files.

2007-08-31 Mathieu Blondel <mblondel@cvs.gnome.org>

    * data/fantasdic/icons/fantasdic.svg: New master icon, based on two icons
    from the Tango project.
    * data/fantasdic/icons/fantasdic_32x32.png: Added for convenience.
    * data/fantasdic/icons/fantasdic_24x24.png: Likewise.
    * data/fantasdic/icons/fantasdic_48x48.ico: Likewise.
    * data/fantasdic/icons/fantasdic_16x16.png: Likewise.
    * data/fantasdic/icons/fantasdic_22x22.ico: Likewise.
    * data/fantasdic/icons/fantasdic_32x32.ico: Likewise.
    * data/fantasdic/icons/fantasdic_small.png: Likewise.
    * data/fantasdic/icons/fantasdic_24x24.ico: Likewise.
    * data/fantasdic/icons/fantasdic_16x16.ico: Likewise.
    * data/fantasdic/icons/fantasdic_22x22.png: Likewise.
    * data/fantasdic/icons/fantasdic_48x48.png: Likewise.
    * lib/fantasdic/ui/main_app.rb: Applied the necessary changes.